# schema-config-template

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  settings.py
chain_json/: example.json
generators/: dotenv.schema.jsonnet
project_folder/: Makefile  conversation_manager.py  main.py  settings.py
project_folder/generators/: dotenv.schema.jsonnet
project_folder/models/: DotenvSchema.py
project_folder/retrieval_datasets/: 侯友宜_dataset.json  侯友宜_dataset.txt  宋楚瑜_dataset.txt  柯文哲_dataset.json  柯文哲_dataset.txt  流口香_dataset.json  流口香_dataset.txt  蔡英文_dataset.txt  賴清德_dataset.json  賴清德_dataset.txt  郭台銘_dataset.json  郭台銘_dataset.txt  韓國瑜_dataset.txt
project_folder/schemas/: dotenv.schema.json
project_folder/settings/: settings.py
project_folder/src/schemas/: models.py
project_folder/src/utils/: benchmark.py  fuzzy_match.py  gen_characters.py  get_chain.py  gpt_cache.py  summarize_chat_history.py
